[tool.poetry]
name = "mazegamepy"
version = "0.1.0"
description = "Maze game for my 6 year old kid in python"
authors = ["ShanKonduru <ShanKonduru@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
